# unboxing

./: README.md  io.github.elly_code.unboxing.yml  io.github.elly_codes.unboxing.yml  io.github.teamcons.unboxing.yml  meson.build
.github/workflows/: githubci.yml
data/: meson.build  unboxing.desktop.in  unboxing.gresource.xml  unboxing.gschema.xml  unboxing.metainfo.xml.in
po/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+173 more)
po/extra/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+170 more)
src/: Application.vala  Backend.vala  FlatpakBundleFile.vala  FlatpakFile.vala  FlatpakRefFile.vala  MainWindow.vala  Welcome.vala
src/Utils/: EnumToLocText.vala  FileOperations.vala  Utils.vala
src/Views/: AbstractView.vala  ErrorView.vala  MainView.vala  ProgressView.vala  SuccessView.vala
